--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <script>
       
-      // This is where you should execute your drawMap function
+      drawMap();
       
     </script>
   </body>
